--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "q": "^2.0.0",
     "request": "^2.36.0",
     "response-time": "^1.0.0",
+    "eztvapi": "^0.1.3",
+    "URIjs": "^1.14.1",
     "trakt-api": "*"
   },
   "engines": {
